# nlp2env

./: .gitignore  CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.events.pb  app.doql.less  goal.yaml  index.html  planfile.yaml  pyproject.toml
examples/: README.md  run-e2e.sh
examples/docker/: nlp2env-e2e.Dockerfile
examples/integrators/mcp-stdio/: README.md  docker-compose.yml  e2e.sh  mcp-config.cursor.json
examples/integrators/todomat-dispatch/: README.md  docker-compose.yml  e2e.sh  prompts.env
examples/write/apply-text/: README.md  docker-compose.yml  e2e.sh
examples/write/custom-keys/: README.md  docker-compose.yml  e2e.sh
examples/write/smtp-email/: README.md  docker-compose.yml  e2e-multilang.sh  e2e.sh  prompts-multilang.log.txt  prompts-multilang.txt  prompts.env  smtp-email-inline.testql.toon.yaml  smtp-email-multilang.testql.toon.yaml  smtp-email.testql.toon.yaml
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
scripts/: test-mcp-live.sh
src/nlp2env/: __init__.py  crypto.py  env_file.py  profiles.py  toon_scenarios.py  validators.py
src/nlp2env_mcp/: __init__.py  __main__.py  server.py
src/uri2env/: __init__.py  cli.py  compile.py  materialize.py  resolve.py  uri.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_crypto.py  test_env_file.py  test_mcp_tools.py  test_toon_scenarios.py  test_uri2env.py  test_validators.py
