[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp2env"
version = "0.1.6"
description = "MCP server for reading and writing .env variables (email/SMTP and custom keys)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
uri = ["pyyaml>=6.0"]
nlp2uri = ["nlp2uri>=0.4.12", "pyyaml>=6.0"]
crypto = ["cryptography>=42.0"]
dev = ["pytest>=8.0", "mcp>=1.0", "cryptography>=42.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.scripts]
nlp2env-mcp = "nlp2env_mcp.server:main"
uri2env = "uri2env.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
